# dreame-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  glama.json  justfile  llms-full.txt  llms.txt  pyproject.toml  start.ps1
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MAP_AND_ROBOTICS.md  PRD.md  TOKEN_AND_HOME_ASSISTANT.md
scratch/: cloud_diag.py  cloud_fix.py  diag_map.py  miio_probe.py  multi_if_discovery.py  raw_udp_probe.py  subnet_scanner.py  verify_crash_fix.py  verify_env_loading.py  verify_final_restoration.py  verify_restoration.py
scripts/: extract_tokens.py  test_map_fetch.py
skills/: dreame-operator.md
src/dreame_mcp/: __init__.py  __main__.py  agentic.py  client.py  map_export.py  portmanteau.py  server.py  state.py
src/dreame_mcp/prompts/: __init__.py
tests/: conftest.py  test_map.py
webapp/: README.md  biome.json  index.html  package.json  start.bat  start.ps1  tailwind.config.js  tailwind.config.ts  vite.config.ts
webapp/src/: App.tsx  index.css  main.tsx  tailwind.css  vite-env.d.ts
webapp/src/components/: MapVisualization.tsx
webapp/src/components/common/: ErrorBoundary.tsx
webapp/src/components/layout/: AppLayout.tsx  Sidebar.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: Controls.tsx  Dashboard.tsx  Help.tsx  Map.tsx  MissionControl.tsx  Settings.tsx  Status.tsx  Tools.tsx
